bpo-46025: Fix a crash in the atexit module for auto-unregistering functions