Modules/atexitmodule.c
@@ -93,13 +93,17 @@ atexit_callfuncs(struct atexit_state *state)
             continue;
         }
 
+        // Increment the refcount of cb->func as the call itself may unregister it
+        PyObject* the_func = cb->func;
+        Py_INCREF(the_func);
         PyObject *res = PyObject_Call(cb->func, cb->args, cb->kwargs);
         if (res == NULL) {
-            _PyErr_WriteUnraisableMsg("in atexit callback", cb->func);
+            _PyErr_WriteUnraisableMsg("in atexit callback", the_func);
         }
         else {
             Py_DECREF(res);
         }
+        Py_DECREF(the_func);
     }
 
     atexit_cleanup(state);
